# wohnungswiesel

./: README.md  main.py  pyproject.toml  requirements.txt  scrapy.cfg  settings.py  settings_filters.py  slackpost.py  zip_codes.py
analytics/: frequency.py  times.py
scraper/: filters.py  items.py  middlewares.py  pipelines.py  settings.py
scraper/pipelines/: covivio_notification.py  duplicate_filter.py  flat_filter.py  slack_notification.py
scraper/spiders/: covivio_spider.py  degewo_spider.py  gcp_spider.py  gewobag_spider.py  immo_ado_spider.py  immoscout_data.py  immoscout_realtors.py  immoscout_spider.py  stadt_haus_spider.py  stadt_und_land_spider.py  tki_spider.py
tests/: conftest.py  test_duplicate_filter.py  test_filters.py  test_parsers.py  test_slackpost.py
tutorial/: items.py  pipelines.py
tutorial/spiders/: covivio_spider.py  quotes_spider.py
utils/: parsers.py  slackpost.py
