[tool.poetry]
name = "wohnungswiesel"
version = "0.1.0"
description = ""
authors = ["Björn <bjoernwe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pydantic = "^1.10.2"
Scrapy = "^2.7.1"
slackclient = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
